# nabla-memo

./: .dev.vars.example  .envrc  .gitignore  .pre-commit-config.yaml  .vercelignore  CLOUDFLARE_DEPLOYMENT.md  HUGO_DEPLOYMENT.md  Makefile  QUICK_START.md  README.md  SETUP_SUMMARY.md  VERCEL_GITHUB_ACTIONS_SETUP.md  hugo.toml  mise.dev.toml  mise.toml  package-lock.json  package.json  pyproject.toml  vercel.json  wrangler.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/instructions/: cloudflare-wrangler-best-practices.instructions.md  hugo-best-practices.instructions.md  vercel-deployment.instructions.md
.github/workflows/: cloudflare-pages-deploy.yml  codeql.yml  hugo-deploy.yml  linter.yml  opencommit.yml  release.yml  renovate.yml  vercel-deploy.yml
content/: _index.md  about.md
content/docs/: run-accent.sh  run-adguardhome.sh  run-ai-embedding.sh  run-ai.sh  run-aide.sh  run-alacritty.sh  run-alertmanager.sh  run-android.sh  run-angular.sh  run-ansible.sh  run-anythingllm.sh  run-apache.sh  run-apparmor.sh  run-apr.sh  run-apt-get-jm.sh  run-apt-get-ubuntu18.sh  run-apt-get-ubuntu19.sh  run-apt-get-ubuntu20.sh  run-apt-get-ubuntu21.sh  run-apt-get-ubuntu22.sh  run-apt-get-ubuntu23.sh  run-apt-get-ubuntu24-upgrade.sh  run-apt-get-ubuntu24.sh  run-apt-get-ubuntu25.sh  run-apt-get.sh  run-argocd.sh  run-arsenal.sh  run-asdf.sh  run-atlassian.sh  run-atom.sh  run-auditd.sh  run-authenticator.sh  run-awesome.sh  run-aws-tower.sh  run-aws.sh  run-awstats.sh  run-azure.sh  run-barrier.sh  run-bash-parallel.sh  (+690 more)
static/: _headers  _redirects
(+1 files in other folders)
