[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nabla-memo"
version = "1.0.0"
description = "Hugo static site for Vercel deployment"
authors = [{ name = "Alban Andrieu", email = "alban.andrieu@free.fr" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Alban Andrieu", email = "alban.andrieu@free.fr" }]
keywords = [
    "hugo",
    "static-site",
    "nabla-memo",
]
classifiers = ["Private :: Do not Upload"]
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/AlbanAndrieu/nabla-memo"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]
default-version = "0.0.0+unknown"
